1.7.0
=====
(Yin Yin Latt)
- [DS-588] Patch for SFX (OpenURL resolver)

(Michael B. Klein)
- [DS-699] ChoiceAuthority plugin for old-style controlled vocabularies

(Andrea Bollini)
- [DS-585] The Content Disposition configuration is ignored by unpublished items

(Reinhard Engels)
- [DS-637] Browse index bug/fix ONLY for authority index: first "too low" confidence value stop current item metadata to be indexed in the autority index

(Hardy Pottinger)
- [DS-691] File size math in the mets:file template in General-Hander.xsl (XMLUI) is incorrect

(Kim Shepherd)
- [DS-688] AuthorizeManager.isAdmin(Context, DSpaceObject) throws exception when EPerson is null
- [DS-689] DisplayStatisticsServlet throws NPE if requested handle is null, should throw 404
- [DS-718] JSPUI redirect users to requested page after authentication
- [DS-719] solr.statistics.logBots isn't documented in dspace.cfg

(Flavio Botelho)
- [DS-563] Multiple spaces in between words in advanced search will make the search return nothing

(Vladislav Zhivkov, Claudia Juergen)
- [DS-625] Bulgarian translation of the jspui for DSpace 1.6.0
- [DS-650] Bulgarian translation of the jspui for DSpace 1.6.2

(Pere Villega)
- [DS-643] New testing framework (GSoC 2010)

(Tim Donohue)
- [DS-648] Modern Browsers are not identified in XMLUI main sitemap.xmap
- [DS-466] Add ability to export/import entire Community/Collection/Item structure (for easier backups, migrations, etc.)
- [DS-387] Add ability for various Packager plugins to report their custom "options" via command line

(Claudia Juergen)
- [DS-426] Item's submission license accessible without being configured to be public
- [DS-569] Trailing white spaces lead to wrong order of texts in browse
- [DS-596] Cannot Delete Community which has two or more levels of SubCommunities
- [DS-628] Make the timeout for the extended resolver dnslookup configurable
- [DS-715] Unification of license treatment in xmlui and jspui

(Claudia Juergen, Andreas Schwander)